[build-system]
requires = ["poetry-core>=1.8.3,<1.9"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pvhotwatercore"
version = "0.0.1"
description = "Core software for controlling a custom photovoltaic hot water setup."
authors = ["Joseph R. Freeston"]

[tool.poetry.dependencies]
python = "^3.12"
flake8 = "^7.1.0"
mypy = "^1.10.0"
pytest = "^8.2.2"
